[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/PlayerVer3.gd" type="Script" id=1]
[ext_resource path="res://Scripts/RigidPlayer4.gd" type="Script" id=2]
[ext_resource path="res://Collision/PlayerBoxCollision.tres" type="Shape2D" id=3]
[ext_resource path="res://Scripts/PlayerCamera.gd" type="Script" id=4]
[ext_resource path="res://PlayerCollisionOutlineShader.tres" type="Material" id=5]
[ext_resource path="res://Sprites/box.png" type="Texture" id=6]
[ext_resource path="res://JumpAnimation.tres" type="Animation" id=7]
[ext_resource path="res://Sprites/select_pointer.png" type="Texture" id=8]
[ext_resource path="res://Scenes/PlayerMask.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/PaletteSelectionWheel.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scripts/TrailHandler.gd" type="Script" id=11]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.5
bounce = 0.1

[node name="Player" type="Node"]
pause_mode = 1
script = ExtResource( 1 )

[node name="PlayerBody" type="RigidBody2D" parent="."]
pause_mode = 1
editor/display_folded = true
physics_material_override = SubResource( 1 )
contacts_reported = 2
can_sleep = false
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBody"]
shape = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="PlayerBody"]
pause_mode = 2
current = true
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 10.0
script = ExtResource( 4 )

[node name="CameraTween" type="Tween" parent="PlayerBody/Camera2D"]

[node name="AnimationDelay" type="Timer" parent="PlayerBody"]
wait_time = 0.1
one_shot = true

[node name="JumpDelay" type="Timer" parent="PlayerBody"]
wait_time = 0.3
one_shot = true

[node name="SpriteScale" type="Node2D" parent="."]
editor/display_folded = true

[node name="PlayerSprite" type="Sprite" parent="SpriteScale"]
material = ExtResource( 5 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="SpriteScale"]
anims/JumpAnimation = ExtResource( 7 )

[node name="DirectionArrow" type="Sprite" parent="SpriteScale"]
scale = Vector2( 1, -1 )
texture = ExtResource( 8 )
offset = Vector2( 0, 60 )

[node name="Tween" type="Tween" parent="SpriteScale/DirectionArrow"]

[node name="PlayerMask" parent="." instance=ExtResource( 9 )]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -37.5
margin_top = -37.5
margin_right = 37.5
margin_bottom = 37.5

[node name="ColorChoices" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="PaletteMenu" parent="ColorChoices" instance=ExtResource( 10 )]
visible = false

[node name="PlayerTrail" type="Node" parent="."]
script = ExtResource( 11 )
[connection signal="jumping" from="PlayerBody" to="." method="_on_RigidBody2D_jumping"]
[connection signal="timeout" from="PlayerBody/AnimationDelay" to="PlayerBody" method="_on_Timer_timeout"]
